Fixed visibility issues with menus

--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@ body {
     background-color:rgba(147, 173, 194, 0.668);
     font-size:20px;
     padding:10px;
-    width:fit-content;
     float:right;
     border:1px solid black;
     border-radius:10px;
@@ -38,6 +37,7 @@ body {
 .popUp {
     position:absolute;
     z-index:10;
+    visibility: hidden;
 }
 
 .popUp .popUpMenu {
@@ -51,15 +51,6 @@ body {
     grid-template-rows: 25% 25% 30% 20%;
     white-space: nowrap;
 }
-
-#login{
-    visibility: hidden;
-}
-
-#signUp {
-    visibility: hidden;
-}
-
 .popUpMenu button {
     margin-left:auto;
     margin-right:auto;
@@ -76,6 +67,13 @@ body {
     cursor:pointer;
 }
 
+#loginButton {
+    display:inline-flex;
+    border:none;
+    background-color: inherit;
+    cursor:pointer;
+}
+
 .popUpMenu label{
     padding:20px;
     margin:20px;
@@ -85,7 +83,7 @@ body {
     padding:5px;
 }
 
-.popUp #signUp .show {
+.popUp .show {
     visibility: visible;
     -webkit-animation: fadeIn 1s;
     animation: fadeIn 1s;
